<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">GPSraw</string>
	<string name="title_activity_main">GPSraw</string>
<!-- for ui design
	<string name="placeholder_lat">35°39\'30.959\"N</string>
	<string name="placeholder_long">139°44\'43.594\"E</string>
	<string name="placeholder_alt">1823 m</string>
	<string name="placeholder_speed">921 km/s</string>
-->
	<string name="placeholder_lat"></string>
	<string name="placeholder_long"></string>
	<string name="placeholder_alt"></string>
	<string name="placeholder_speed"></string>
	<string name="placeholder_acc"></string>
	<string name="placeholder_nsatellite">0</string>
	<string name="lat_north">N</string>
	<string name="lat_south">S</string>
	<string name="long_east">E</string>
	<string name="long_west">W</string>
	<string name="lat_north_prefix"></string>
	<string name="lat_south_prefix"></string>
	<string name="long_east_prefix"></string>
	<string name="long_west_prefix"></string>
	<string name="suffix_meters">\u0020m</string>
	<string name="suffix_feet">\u0020ft</string>
	<string name="degrees">°</string>
	<string name="minutes">\'</string>
	<string name="seconds">\"</string>
	<string name="accuracy_prefix">±</string>
	<string name="action_settings">Settings</string>
	<string name="location_extra_satellites_key">satellites</string>
	<string name="provider_auto">Auto\u0020</string>
	
	<string name="title_activity_settings">Settings</string>
	<string name="unitoflength">Unit of length</string>
	<string name="unitoflength_meters">m</string>
	<string name="unitoflength_feet">ft</string>
	<string name="unitoflength_default">0</string>
	<string name="unitofspeed">Unit of speed</string>
	<string name="unitofspeed_ms">m/s</string>
	<string name="unitofspeed_kmh">km/h</string>
	<string name="unitofspeed_mph">mph</string>
	<string name="unitofspeed_default">0</string>
	<string name="locationformat">Location format</string>
	<string name="locationformat_seconds">DDD°MM\'SS.SS\"</string>
	<string name="locationformat_minutes">DDD°MM.MMMM\'</string>
	<string name="locationformat_degrees">±DDD.DDDD°</string>
	<string name="locationformat_default">2</string>
	<string name="mantissadigits">Mantissa digits</string>
	<string name="mantissadigits_2">2</string>
	<string name="mantissadigits_3">3</string>
	<string name="mantissadigits_4">4</string>
	<string name="mantissadigits_5">5</string>
	<string name="mantissadigits_6">6</string>
	<string name="mantissadigits_default">3</string>
	<string name="pref_goweb">Visit website</string>
	<string name="pref_weburl">https://www.okqubit.net/gpsraw/</string>
	
	<string name="title_activity_satellites">Satellites</string>
	<string name="fstRowPRN">PRN\#</string>
	<string name="fstRowAzi">Az°</string>
	<string name="fstRowElev">El°</string>
	<string name="fstRowSnr">SNR</string>
	<string name="fstRowHasAlmanac">Alm</string>
	<string name="fstRowHasEphemeris">Eph</string>
	<string name="fstRowUsedInFix">Fix</string>
	<string name="action_satellites">Satellites</string>
	<string name="checkmark">\u2713</string>
	<string name="uncheckmark"></string>
</resources>
