<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<ListPreference 
		android:key="pref_unitoflength"
		android:title="@string/unitoflength"
		android:entries="@array/unitoflength_labels"
		android:entryValues="@array/unitoflength_values"
		android:defaultValue="@string/unitoflength_default" />
	<ListPreference 
		android:key="pref_locationformat"
		android:title="@string/locationformat"
		android:entries="@array/locationformat_labels"
		android:entryValues="@array/locationformat_values"
		android:defaultValue="@string/locationformat_default" />
	<ListPreference 
		android:key="pref_mantissadigits"
		android:title="@string/mantissadigits"
		android:entries="@array/mantissadigits_labels"
		android:entryValues="@array/mantissadigits_values"
		android:defaultValue="@string/mantissadigits_default" />
	<Preference android:title="@string/pref_goweb"
		android:summary="@string/pref_weburl">
		<intent android:action="android.intent.action.VIEW"
			android:data="@string/pref_weburl" />
	</Preference>
</PreferenceScreen>
