<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	
	tools:context="onion.gpsraw.MainActivity" >

	<TextView
		android:id="@+id/longTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:text="@string/placeholder_long"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textSize="@dimen/numbers_size"
		android:clickable="true"
		android:onClick="copyLocation" />

	<TextView
		android:id="@+id/latTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/longTextView"
		android:layout_centerHorizontal="true"
		android:text="@string/placeholder_lat"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textSize="@dimen/numbers_size"
		android:clickable="true"
		android:onClick="copyLocation" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/longTextView"
		android:layout_centerHorizontal="true"
		android:paddingTop="@dimen/padding_above_altitude"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/altTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/placeholder_alt"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textSize="@dimen/numbers_size"
			android:clickable="true"
			android:onClick="copyAltitude" />
		<TextView
			android:id="@+id/speedTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/placeholder_speed"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textSize="@dimen/numbers_size"
			android:paddingLeft="@dimen/padding_speed_left"
			android:clickable="true"
			android:onClick="copySpeed" />
	</LinearLayout>

	<ProgressBar
		android:id="@+id/progressBar"
		style="?android:attr/progressBarStyleHorizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentEnd="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentStart="true"
		android:indeterminate="true" />

	<TextView
		android:id="@+id/accuracyTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@id/latTextView"
		android:layout_centerHorizontal="true"
		android:text="@string/placeholder_acc"
		android:textAppearance="?android:attr/textAppearanceSmall" />

	<TextView
		android:id="@+id/numSatelliteTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:drawableLeft="@drawable/satellite_vec"
		android:drawablePadding="@dimen/padding_satellite_icon"
		android:drawableStart="@drawable/satellite_vec"
		android:text="@string/placeholder_nsatellite"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:visibility="invisible" />

	<Spinner
		android:id="@+id/providerSpinner"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true" />

</RelativeLayout>
